--- a/src/views/screens/home.njk
+++ b/src/views/screens/home.njk
@@ -1,5 +1,16 @@
 {% extends "layout/template.njk" %}
 
 {% block content %}
-  <h1 class="govuk-heading-xl">Landing page</h1>
+    <div class="full-width-banner">
+        <div class="banner-block">
+            <h1 class="govuk-heading-xl banner-block__heading-xl">Natural Capital Search Service</h1>
+            <span class="govuk-caption-l banner-block__caption-l">Use this service to search for data and information about the environment and ecosystems in the UK. This service can be used to support natural capital approaches to evidence and decision making</span>
+        </div>
+    </div>
+
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-full video-block">
+            <span class="govuk-caption-m video-block__caption-m">What is natural capital?</span>
+        </div>
+    </div>
 {% endblock %}
