--- a/src/views/layout/template.njk
+++ b/src/views/layout/template.njk
@@ -20,7 +20,7 @@
 
 {% block header %}
   {{ govukHeader({
-    homepageUrl: "/",
+    homepageUrl: homePageUrl,
     serviceName: serviceName
   }) }}
 {% endblock %}
