--- a/public/application.css
+++ b/public/application.css
@@ -7515,18 +7515,18 @@
   margin-bottom: 20px;
 }
 
-.banner-block {
+.banner-container {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.banner-block__heading-xl {
+.banner-container__heading-xl {
   font-size: 36px;
   font-style: normal;
   line-height: 40px;
   color: #ffffff;
   margin-bottom: 20px;
 }
-.banner-block__caption-l {
+.banner-container__caption-l {
   font-size: 19px;
   font-style: normal;
   line-height: 25px;
@@ -7534,10 +7534,10 @@
   color: #ffffff;
 }
 
-.video-block {
+.video-container {
   margin-bottom: 40px;
 }
-.video-block__caption-m {
+.video-container__caption-m {
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -7546,4 +7546,22 @@
   padding-top: 30px;
   padding-bottom: 30px;
   border-top: 1.5px solid #b1b4b6;
+}
+.video-container__frame {
+  position: relative;
+  padding-bottom: 33%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+}
+.video-container__frame iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+@media screen and (max-width: 799px) {
+  .video-container__frame iframe {
+    width: 100%;
+    height: 100%;
+  }
 }
