--- a/src/views/screens/home/_home.scss
+++ b/src/views/screens/home/_home.scss
@@ -30,7 +30,7 @@
 .video-container {
   margin-bottom: 40px;
 
-  &__caption-m {
+  &__heading-m {
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -38,6 +38,7 @@
     color: $govuk-text-colour;
     padding-top: 30px;
     padding-bottom: 30px;
+    margin: 0px;
     border-top: 1.5px solid $govuk-border-colour;
   }
 
