--- a/public/application.css
+++ b/public/application.css
@@ -7507,9 +7507,6 @@
   padding-bottom: 10px;
 }
 
-.quick_search-container {
-  margin-bottom: 10px;
-}
 .quick_search-container__heading-m {
   font-size: 24px;
   font-style: normal;
@@ -7529,6 +7526,41 @@
   line-height: 25px;
   color: #0b0c0c;
   padding-top: 20px;
+}
+
+.search-block__form {
+  position: relative;
+  width: 630px;
+}
+.search-block__label {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important;
+  border: 0 !important;
+  white-space: nowrap !important;
+}
+.search-block__button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border: 0;
+  background-color: #008938;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 0;
+  width: 40px;
+  height: 100%;
+  background-image: url(/assets/images/search-icon.png);
+  background-repeat: no-repeat;
+  background-position: 10px 50%;
+  text-indent: -5000px;
+  overflow: hidden;
 }
 
 .full-width-banner {
