--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -1,9 +1,6 @@
 .quick_search-container {
   &__heading-m {
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 30px;
+    @include font-style-stack(24px, 30px);
     color: $govuk-text-colour;
     margin: 0px;
 
@@ -14,10 +11,7 @@
 
   &__caption-m {
     width: 630px;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 25px;
+    @include font-style-stack(19px, 25px, 300);
     color: $govuk-text-colour;
     padding-top: 20px;
   }
