--- a/public/application.css
+++ b/public/application.css
@@ -7650,3 +7650,113 @@
     height: 100%;
   }
 }
+
+@media only screen and (min-width: 769px) {
+  .header-container {
+    display: block;
+  }
+}
+.header-container .header-main {
+  color: #0b0c0c;
+  padding: 0.5rem 0px;
+  border-bottom: 6px solid #008938;
+  background: #ffffff !important;
+}
+
+.header-div-container {
+  width: 100%;
+}
+
+.header-container .header-main .site-width-container {
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+@media only screen and (min-width: 1020px) {
+  .header-div-container .site-width-container {
+    width: 100%;
+    margin: 0px auto;
+    max-width: 960px;
+    padding: 0px;
+  }
+}
+.header-div-container .site-width-container {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  padding: 0px 16px;
+}
+
+.header-logo-container {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.header-logo-container .defra-logo {
+  padding-left: 2px;
+  border-left: 2px solid #00703c;
+}
+
+.header-logo-container a, .header-logo-container a:visited, .header-logo-container a:link {
+  margin-left: 0.5rem;
+  color: #0b0c0c;
+  text-decoration: none;
+}
+
+.header-logo-link {
+  font-family: GDS Transport, Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+@media only screen and (min-width: 641px) {
+  .logo-link {
+    font-size: 19px;
+  }
+}
+.logo-link {
+  color: #008938;
+  font-size: 16px;
+}
+
+.header-logo-container .defra-logo-text {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.35;
+}
+
+.header-logo-container .govuk-header__service-name {
+  font-size: 18px;
+  margin-bottom: 0px;
+  padding-left: 6em;
+}
+
+@media (min-width: 40.0625em) {
+  .govuk-header__link--service-name, .govuk-header__service-name {
+    font-size: 24px;
+    font-size: 1.5rem;
+    line-height: 1.25;
+  }
+}
+.govuk-header__link--service-name, .govuk-header__service-name {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-family: GDS Transport, arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 700;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.1111111111;
+}
+
+.govuk-tag.govuk-phase-banner__content__tag {
+  background-color: #1d70b8;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 1px;
+}
