294236 - Guided search for date questionnaire (#11)
* feat: Header & Footer fixes

* Addressed PR Comments

* feat: Date Questionnaire

* guided search for date questionnaire

* Schema validation

* fix: Business validations

* fix: Update snapshot

* fix: Unit test cases

* fix: More unit test cases

* fix: Unit test cases completed

--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -1,6 +1,7 @@
 {% extends "layout/template.njk" %}
 
 {% from "partials/quick_search/macro.njk" import quickSearch %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block content %}
   <div class="full-width-banner">
@@ -11,6 +12,26 @@
   </div>
 
   {{ quickSearch() }}
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h2 class="govuk-heading-m">
+        Questionnaire search
+      </h2>
+      <p class="govuk-body">
+        A set of questions to narrow down your search for data and information.<br> 
+        This may be useful if you're not sure what you're looking for.
+      </p>
+    </div> 
+  </div>
+
+  {{ govukButton({
+    id: 'guided-search',
+    name: 'guided-search',
+    text: "Start",
+    isStartButton: true,
+    href: '/guided-search'
+  }) }}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full video-container">
