260719 - Configuration for environment variables and secrets (#9)
* 260719 - Installed dotenv and confiugred environment variables.

* 260719 - Improved the environment config & implemented the test cases

* 260719 - Improved environment varaibles configuratio, implemented unit test cases for both environment variables and geoNetworkClient

* 260719 - Implemented a logic to retrieve the secret keys from the given azure key vault

* 260719 - Implemented test case for azure key vault client and reading the secrets with mocking

* 260719 - Changing the tags to header and article and adding ARIA roles. Also fixing the full width banner size in large screens

* 260719 - Fixing the test case issues

* 260719 - Fixing the test cases

* 260719 - Updated the readme.md file with environment variables information

* 260719 - Addressed the PR review comments

* 260719 - Removed models folder and moved the interfaces and schema folders to src folder

--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -4,12 +4,12 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block content %}
-  <div class="full-width-banner">
+  <header class="full-width-banner" role="banner">
     <div class="banner-container">
       <h1 class="govuk-heading-xl banner-container__heading-xl">Natural Capital Search Service</h1>
       <span class="govuk-caption-l banner-container__caption-l">Use this service to search for data and information about the environment and ecosystems in the UK. This service can be used to support natural capital approaches to evidence and decision making</span>
     </div>
-  </div>
+  </header>
 
   {{ quickSearch() }}
 
@@ -22,7 +22,7 @@
         A set of questions to narrow down your search for data and information.<br> 
         This may be useful if you're not sure what you're looking for.
       </p>
-    </div> 
+    </div>
   </div>
 
   {{ govukButton({
@@ -33,12 +33,12 @@
     href: '/guided-search'
   }) }}
 
-  <div class="govuk-grid-row">
+  <article class="govuk-grid-row" role="article">
     <div class="govuk-grid-column-full video-container">
       <h1 class="govuk-heading-m govuk-\!-static-margin-0 video-container__heading-m">What is natural capital?</h1>
       <div class="video-container__frame">
         <iframe width="630" height="354" src="https://www.youtube.com/embed/4wx0rMruSJo?si=h-SD8VoSUSNwqo1S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
-  </div>
+  </article>
 {% endblock %}
