--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -59,7 +59,7 @@
     cursor: pointer;
     padding: 0;
     width: 40px;
-    height: 100%;
+    height: inherit;
     background-image: url(/assets/images/search-icon.png);
     background-repeat: no-repeat;
     background-position: 10px 50%;
