--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -23,16 +23,16 @@
 
   {{ quickSearch({
     isResultPage: true,
-    searchTerm: searchTerm
+    searchTerm: searchTerm,
+    searchInputError : searchInputError
   }) }}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
       <p>&nbsp;</p>
     </div>
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-section-break--visible">
-        <h2 class="govuk-heading-m">{{searchResults.hits.total.value}} results</h2>
+        <h2 class="govuk-heading-m">{%- if searchResults.hits.total.value > 0 -%} {{searchResults.hits.total.value}} results {%- else -%} 0 results found {%- endif -%}</h2>
       </div>
       {%- if hasResult == true -%}
       {%- if searchResults.hits.total.value > 0 -%}
@@ -63,7 +63,8 @@
         </div>
       {% endfor %}
       {%- else -%}
-        <p class="govuk-caption-m govuk-!-font-size-14">No results.</p>
+        <p class="govuk-heading-m">There are no matching results</p>
+        <p class="govuk-caption-m govuk-!-font-size-14">Search with different keywords.</p>
       {%- endif -%}
       {%- else -%}
         <p class="govuk-caption-m govuk-!-font-size-14">Unable to fetch the search results. Please try again.</p>
