294976 - Search using geography coordinates (#15)
* feat: Header & Footer fixes

* Addressed PR Comments

* 260719 - Installed dotenv and confiugred environment variables.

* 260719 - Improved the environment config & implemented the test cases

* 260719 - Improved environment varaibles configuratio, implemented unit test cases for both environment variables and geoNetworkClient

* 260719 - Implemented a logic to retrieve the secret keys from the given azure key vault

* 260719 - Implemented test case for azure key vault client and reading the secrets with mocking

* 260719 - Changing the tags to header and article and adding ARIA roles. Also fixing the full width banner size in large screens

* 294755 - Implemented a plugin to share data across different routes

* 294755 - Added decorators to benefit from TypeScript typings

* 294755 - Update the plugin login to correct the type definitions and fix the issue while reading the data

* 294755 - Renamed the SearchController

* 260719 - Fixing the test case issues

* 260719 - Fixing the test cases

* 29475 - Implemented the Search API integration with search term and date range query

* 294755 - Fixing the failed test case

* 294755 - Fixing the sonar issues

* 294755 - Added test cases to improve the coverage

* 294755 - Exposed new method to reset the shared data

* 294755 - Refactoring the search api and results response

* 294755 - Implemented new and fixed failed test cases

* 294755 - using the optional chain express

* 260719 - Updated the readme.md file with environment variables information

* 294755 - Added new test cases and fixed failed test cases

* 294755 - Fixing the test cases

* feat: Date Questionnaire

* guided search for date questionnaire

* Schema validation

* 294755 - recfactored the logic for reusability and manintainability

* 294755 - Reverting the pipeline changes and small change in the tsconfig.json file

* 294755 - Adding the tes

--- a/public/application.css
+++ b/public/application.css
@@ -7450,7 +7450,7 @@
   font-size: 36px;
 }
 .quick_search-container__caption-m {
-  width: 630px;
+  width: 640px;
   font-size: 1.1875rem;
   font-style: normal;
   font-weight: 300;
@@ -7502,6 +7502,18 @@
   background-position: 10px 50%;
   text-indent: -5000px;
   overflow: hidden;
+}
+
+.count-block {
+  border-bottom: 2px solid #b1b4b6;
+  padding-bottom: 30px;
+}
+.count-block-link {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  text-decoration-line: underline;
 }
 
 .app-main-class {
@@ -7678,6 +7690,17 @@
   font-weight: 700;
   line-height: 16px;
   letter-spacing: 1px;
+}
+
+.geography-fields__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.geography-buttons__right {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .search-result__item {
