--- a/src/views/layout/template.njk
+++ b/src/views/layout/template.njk
@@ -78,6 +78,10 @@
     import {initAll} from '{{ assetPath }}/all.js'
     initAll()
   </script>
+  <script>
+    const appInsightsConnString = "{{ appInsightsConnectionString }}";
+  </script>
+  <script type="text/javascript" src="{{ assetPath }}/scripts/appinsights.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/customScripts.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/fetchResults.js"></script>
 {% endblock %}
