--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -6,6 +6,11 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
+{% block head %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ assetPath }}/css/ol.css">
+{% endblock %}
+
 {% block beforeContent %}
   {{ super() }}
   {{ govukBreadcrumbs({
@@ -23,6 +28,17 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full govuk-!-padding-top-6 govuk-!-padding-bottom-6">
       <h2 class="govuk-heading-l">What geography does it cover?</h2>
+      <h1 class="govuk-heading-m">Draw area on map</h1>
+      <span class="govuk-caption-m">Click and drag to draw a boundary box. This will auto-populate the geographical coordinate box.</span>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <div id="coordinate-map" style="width: 660px; height: 623px;"></div>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full govuk-!-padding-top-6 govuk-!-padding-bottom-6">
       <h1 class="govuk-heading-m">Geographical coordinate box</h1>
       <span class="govuk-caption-m">Enter a coordinate in each field to create a geographic bounding box. This will show you the data that exists within that geographical area.</span>
     </div>
@@ -53,4 +69,10 @@
       </div>
     </div>
   </form>
+{% endblock %}
+
+{% block bodyEnd %}
+  {{ super() }}
+  <script src="{{ assetPath }}/scripts/ol.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/renderMapToDrawPolygon.js"></script>
 {% endblock %}
