--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -34,6 +34,34 @@
           }
         ]
       }) }}
+
+      {{ govukSelect({
+        id: "page-results",
+        name: "page-results",
+        label: {
+          text: "Results per page",
+          classes: "option-label"
+        },
+        classes: "option-items",
+        formGroup: {
+          classes: "option-group"
+        },
+        items: [
+          {
+            value: "20",
+            text: "20"
+          },
+          {
+            value: "50",
+            text: "50"
+          },
+          {
+            value: "100",
+            text: "100"
+          }
+        ]
+      }) }}
+
     </div>
   </div>
 {% endif %}
