--- a/src/assets/sass/_root.scss
+++ b/src/assets/sass/_root.scss
@@ -6,6 +6,7 @@
 
 @import "./components/search";
 @import "./components/results_count";
+@import "./components/modal";
 
 @import "./templates/layout";
 @import "./templates/home";
