Features/319329 implementing pagination in search results page (#23)
* feat: Results per page component at results page

* feat: Pagination initial commit

* feat: Pagination on results page

* Changing test data

* fix: Sonar issues

* fix: PR comments

* fix: PR comments

* fix: PR comments

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -79,3 +79,18 @@
     width: 80px;
   }
 }
+.govuk-pagination{
+  margin-top: 20px;
+}
+.govuk-pagination__item--current{
+  background-color: #00703C;
+}
+.govuk-link:link {
+  color: #00703C;
+}
+.govuk-link:visited{
+  color: #00703C;
+}
+.govuk-pagination__item--current:hover {
+  background-color: #00703C;
+}
