--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -1,5 +1,6 @@
-{% from 'govuk/components/button/macro.njk' import govukButton %}
-{% from 'govuk/components/select/macro.njk' import govukSelect %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/select/macro.njk" import govukSelect %}
+{% from "govuk/components/pagination/macro.njk" import govukPagination %}
 
 {% if hasError %}
   <p class="govuk-caption-m govuk-!-font-size-14">Unable to fetch the search results. Please try again.</p>
@@ -116,6 +117,9 @@
       </div>
     {% endfor %}
   </div>
+
+{{ govukPagination(paginationItems) }}
+
 {% endif %}
 
 {% if not searchResults.total and not hasError %}
